fix: fix the spacing of PromptHeader and go-back button style

--- a/src/components/Dialog/styling/Prompt.scss
+++ b/src/components/Dialog/styling/Prompt.scss
@@ -19,7 +19,6 @@
   .str-chat__prompt__header {
     display: flex;
     align-items: center;
-    gap: var(--spacing-md);
     width: 100%;
     padding: var(--spacing-xl);
 
@@ -28,6 +27,7 @@
       flex-direction: column;
       gap: var(--spacing-xxs);
       flex: 1;
+      padding-inline: var(--spacing-xs) var(--spacing-md);
       min-width: 0;
     }
 
@@ -39,21 +39,6 @@
     .str-chat__prompt__header__description {
       font: var(--str-chat__body-text);
       color: var(--text-secondary);
-    }
-
-    button.str-chat__prompt__header__go-back-button {
-      @include utils.button-reset;
-      flex-shrink: 0;
-      padding: var(--spacing-sm);
-      background-image: var(--str-chat__arrow-left-icon);
-      background-size: var(--icon-size-md);
-      background-repeat: no-repeat;
-      background-position: center;
-      color: var(--text-primary);
-
-      &:focus-visible {
-        @include utils.focusable;
-      }
     }
 
     .str-chat__prompt__header__close-button {
